--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chromium": "^3.0.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "geckodriver": "^4.3.2",
+    "puppeteer": "^22.0.0",
     "selenium-webdriver": "^4.17.0"
   }
+  
 }
